<resources>
    <string name="app_name">Golden Bear Company</string>
    <string name="mensagem_inicial">Faça seu Login!</string>

    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configuração</string>
    <string name="action_sair">Sair</string>
    <string name="nav_produtos">Produtos</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_mensagem">Mensagem</string>
    <string name="nav_localizacao">Localizacao</string>
    <string name="nav_abrir">Abrir</string>
    <string name="nav_fechar">Fechar</string>
    <string name="action_novaa">Novo Produto</string>
<<<<<<< HEAD
    <string name="action_remover">Remover</string>
=======
    <string name="action_remover">Remover Produto</string>

    <string name="API_KEY">AIzaSyCc3ZSMOGl6FPQsNenz1gc7NwbPeEtjIG8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 9524893e80209d821638fc3068cf5a6c6c72def1
</resources>