<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_produto_balck"
            android:title="@string/nav_produtos"
            android:checked="true" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum_black"
            android:title="@string/nav_forum" />
        <item
            android:id="@+id/nav_mensagem"
            android:icon="@drawable/ic_chat_black"
            android:title="@string/nav_mensagem" />
        <item
            android:id="@+id/nav_localizacao"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/nav_localizacao" />
        <item
            android:id="@+id/nav_configuracao"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="@string/action_config" />
    </group>
</menu>